--- a/src/ui/components/inputList/inputlist.css
+++ b/src/ui/components/inputList/inputlist.css
@@ -9,6 +9,7 @@
   align-items: stretch;
   justify-content: stretch;
   box-sizing: border-box;
+  z-index: 1;
 }
 
 .input-wrapper>input {
